--- a/BookFlow.API/BookFlow.API.csproj
+++ b/BookFlow.API/BookFlow.API.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BookFlow.Application\BookFlow.Application.csproj" />
+    <ProjectReference Include="..\BookFlow.Core\BookFlow.Core.csproj" />
+  </ItemGroup>
+
 </Project>
