Cria a conexao com a base de dados usando Entity Framework

--- a/BookFlow.API/appsettings.json
+++ b/BookFlow.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DevFreelaCs": "Server=localhost;Database=BOOKFLOW;Integrated Security=True;trustServerCertificate=true"
+  }
 }
