--- a/BookFlow.API/BookFlow.API.csproj
+++ b/BookFlow.API/BookFlow.API.csproj
@@ -8,12 +8,18 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.4.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.3.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BookFlow.Application\BookFlow.Application.csproj" />
     <ProjectReference Include="..\BookFlow.Core\BookFlow.Core.csproj" />
+    <ProjectReference Include="..\BookFlow.Infrastructure\BookFlow.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
