Criação das migrations

--- a/BookFlow.API/appsettings.json
+++ b/BookFlow.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevFreelaCs": "Server=localhost;Database=BOOKFLOW;Integrated Security=True;trustServerCertificate=true"
+    "BookFlowCs": "Server=localhost;Database=BOOKFLOW;Integrated Security=True;trustServerCertificate=true"
   }
 }
