--- a/BookFlow.Application/BookFlow.Application.csproj
+++ b/BookFlow.Application/BookFlow.Application.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BookFlow.Core\BookFlow.Core.csproj" />
+  </ItemGroup>
+
 </Project>
